# cogar

./: Cargo.toml  README.md
crates/client/: .gitignore  Cargo.toml  README.md  build.rs  package.json
crates/client/src/: lib.rs
crates/client/src/camera/: mod.rs
crates/client/src/game/: mod.rs
crates/client/src/input/: mod.rs
crates/client/src/network/: mod.rs
crates/client/src/render/: mod.rs
crates/client/src/ui/: mod.rs
crates/client/src/utils/: mod.rs
crates/client/web/: index.html  main.css  main.js  tailwind.input.css
crates/protocol/: Cargo.toml
crates/protocol/src/: binary.rs  error.rs  lib.rs
crates/protocol/src/packets/: client.rs  mod.rs  server.rs
crates/server/: Cargo.toml
crates/server/src/: collision.rs  config.rs  lib.rs  main.rs  world.rs
crates/server/src/ai/: bot_manager.rs  bot_player.rs  mod.rs
crates/server/src/entity/: cell.rs  ejected_mass.rs  food.rs  mod.rs  mother_cell.rs  player_cell.rs  virus.rs
crates/server/src/gamemodes/: beatdown.rs  experimental.rs  ffa.rs  hunger_games.rs  mod.rs  rainbow.rs  teams.rs  tournament.rs
crates/server/src/server/: client.rs  game.rs  game_state.rs  mod.rs
crates/server/src/spatial/: mod.rs  quadtree.rs
