[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Protocol codec (shared with server)
protocol = { path = "../protocol" }

# WASM & JS interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Blob",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "Performance",
    "ImageData",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlElement",
    "Element",
    "EventTarget",
    "console",
    "AddEventListenerOptions",
    "Location",
    "DomTokenList",
] }
js-sys = "0.3"

# Math
glam.workspace = true

# Serialization
serde.workspace = true
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Utilities
console_error_panic_hook = "0.1"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
