[package]
name = "server"
description = "Native Ogar game server (MultiOgar-Edited compatible)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
protocol = { path = "../protocol" }
anyhow.workspace = true

bytes.workspace = true
glam.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
serde.workspace = true
rand.workspace = true
fixedbitset = "0.5"
